# docurator

./: .gitignore  project_tracker.md
.github/: pull_request_template.md
.github/workflows/: ruff_lint.yaml
docurator/: pyproject.toml
docurator/docurator/: __init__.py  content_parser.py  doc_containers.py  docurator.py  docurator_object.py  module_traverser.py
docurator/docurator/_components/: config_loader.py  doc_containers.py  module_traverser.py
docurator/docurator/_defaults/: md_templates.py  settings.py
docurator/test_src/: advanced_operations.py  data_structures.py  math_operations.py  string_operations.py
docurator/tests/: __init__.py
